# Otus_homework1

./: .travis.yml  CMakeLists.txt  README.md  lib.cpp  main.cpp
lib/: CMakeLists.txt  lib.cpp  lib.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_version.cpp
